--- a/app/views/ml_models/show.html.erb
+++ b/app/views/ml_models/show.html.erb
@@ -3,7 +3,7 @@
 <h2 class="text-xl font-bold">Creator: <%= @ml_model.account.full_name %></h2>
 
 <code class="bg-gray-50">
-  <%= @ml_model.parameters %>
+  <%= @ml_model.parameters_with_orders %>
 </code>
 
 <code class="bg-orange-50">
