Updates to links

--- a/app/views/admin/ml_models/index.html.erb
+++ b/app/views/admin/ml_models/index.html.erb
@@ -1,3 +1,5 @@
+<%= link_to 'Create new Ml Model', [:new, :admin, :ml_model] %>
+
 <table class="table-auto text-sm">
   <thead class="bg-gray-100">
     <tr>
