Prediction param db, route, controller and views with dialog and toggle js controller

--- a/app/views/admin/ml_models/show.html.erb
+++ b/app/views/admin/ml_models/show.html.erb
@@ -11,6 +11,12 @@
 
 <h3>Get Prediction</h3>
 
+
+<%= render 'admin/prediction_params/prediction_params_section', ml_model: @ml_model, prediction_params: @prediction_params %>
+
+<hr />
+
+<div id="prediction"></div>
 <hr />
 
 <%= render 'shared/admin_comments_section', admin_commentable: @ml_model, admin_comments: @admin_comments, pagy: @pagy %>
