Dialog turbo frame

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -27,5 +27,7 @@
     <div id="flash" class="fixed top-0 right-0">
       <%= render 'shared/flash' %>
     </div>
+
+    <%= turbo_frame_tag 'dialog' %>
   </body>
 </html>
