--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -4,6 +4,13 @@
   <%= link_to 'Go To Group Chats', [:group, :chats] %>
 </div>
 
+<%= content_for :style do %>
+  <%= ".msg-#{current_account.id}" %> {
+    background-color: red;
+    text-align: right;
+  }
+<% end %>
+
 <div class="w-full flex h-96" data-controller="chats frames">
   <section class="w-1/3 bg-purple-200 h-96 overflow-scroll">
     <%= turbo_frame_tag 'chats' do %>
@@ -19,21 +26,14 @@
             Load More Chats
           <% end %>
         <% end %>
-
       <% else %>
         No Chats for you right now
       <% end %>
     <% end %>
   </section>
-  <section class="w-2/3 bg-orange-200">
+  <section class="w-2/3 bg-orange-200 overflow-scroll">
     <% unless @is_paginated || @no_chats %>
-      <%= turbo_frame_tag 'chat', data: { action: 'turbo:before-frame-render->chats#activateChatTab', id: @chat.id } do %>
-        <% @messages.each do |message| %>
-          <div class=<%= chat_message_class(message) %>>
-            <%= message.body %>
-          </div>
-        <% end %>
-      <% end %>
+      <%= render 'chat', chat: @chat, messages: @messages, message: @message %>
     <% end %>
   </section>
 </div>
