--- a/app/views/chats/group.html.erb
+++ b/app/views/chats/group.html.erb
@@ -7,27 +7,18 @@
 <div class="w-full flex h-96" data-controller="chats frames">
   <section class="w-1/3 bg-purple-200 overflow-scroll">
     <%= turbo_frame_tag 'chats' do %>
-      <% unless @no_chats %>
-        <% @chats.each do |chat| %>
-          <%= link_to chat, data: { turbo_frame: 'chat', chats_target: 'chatTab', id: dom_id(chat) }, class: "shadow border p-3 block #{'bg-orange-500' if selected_chat?(chat)}" do %>
-            <%= chat.accounts.count %>
-          <% end %>
-        <% end %>
+      <%= turbo_stream_from chat_tab_stream(current_account, chat_type: :multi_person) %>
 
-        <% if @pagy.page < @pagy.pages %>
-          <%= turbo_frame_tag 'chats', src: chats_path({ page: @pagy.page + 1 }), loading: 'lazy', data: { action: 'turbo:before-frame-render->frames#morphChildren' } do %>
-            Load More Chats
-          <% end %>
+      <div id="chat_tabs">
+        <% @chats.each do |chat| %>
+          <%= render 'chat_tab', chat:, account: false, notification: false %>
         <% end %>
-      <% else %>
-        No Chats for you right now.
-      <% end %>
+      </div>
     <% end %>
   </section>
   <section class="w-2/3 bg-orange-200 overflow-scroll">
-    <% unless @is_paginated || @no_chats %>
+    <% if @chat.present? %>
       <%= render 'chat', chat: @chat, messages: @messages, message: @message %>
-
     <% end %>
   </section>
 </div>
