--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -11,28 +11,20 @@
   }
 <% end %>
 
-<div class="w-full flex h-96" data-controller="chats frames">
+<div class="w-full flex h-96" data-controller="chats">
   <section class="w-1/3 bg-purple-200 h-96 overflow-scroll">
     <%= turbo_frame_tag 'chats' do %>
-      <% unless @no_chats %>
-        <% @chats.zip(@accounts).each do |chat, account| %>
-          <%= link_to chat, data: { turbo_frame: 'chat', chats_target: 'chatTab', id: dom_id(chat) }, class: "shadow border p-3 block #{'bg-orange-500' if selected_chat?(chat)}" do %>
-            <%= account.full_name %>
-          <% end %>
-        <% end %>
+      <%= turbo_stream_from chat_tab_stream(current_account) %>
 
-        <% if @pagy.page < @pagy.pages %>
-          <%= turbo_frame_tag 'chats', src: chats_path({ page: @pagy.page + 1 }), loading: 'lazy', data: { action: 'turbo:before-frame-render->frames#morphChildren' } do %>
-            Load More Chats
-          <% end %>
+      <div id="chat_tabs">
+        <% @chats.zip(@accounts).each do |chat, account| %>
+          <%= render 'chat_tab', chat:, account:, notification: false %>
         <% end %>
-      <% else %>
-        No Chats for you right now
-      <% end %>
+      </div>
     <% end %>
   </section>
   <section class="w-2/3 bg-orange-200 overflow-scroll">
-    <% unless @is_paginated || @no_chats %>
+    <% if @chat.present? %>
       <%= render 'chat', chat: @chat, messages: @messages, message: @message %>
     <% end %>
   </section>
