--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,5 +1,6 @@
-@import "font-awesome";
+@import 'font-awesome';
 @import 'actiontext.css';
+@import url('https://fonts.googleapis.com/css2?family=Sail&display=swap');
 
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
