--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -1,31 +1,41 @@
-<div>
-  <h1 class="font-bold text-4xl">Chats#index</h1>
-  <p>Find me in app/views/chats/index.html.erb</p>
-  <%= link_to 'Go To Group Chats', [:group, :chats] %>
-</div>
+<section class="container">
 
-<%= content_for :style do %>
-  <%= ".msg-#{current_account.id}" %> {
-    background-color: red;
-    text-align: right;
-  }
-<% end %>
+  <div>
+    <h1 class="font-bold text-4xl">Chats#index</h1>
+    <p>Find me in app/views/chats/index.html.erb</p>
+    <%= link_to 'Go To Group Chats', [:group, :chats] %>
+  </div>
 
-<div class="w-full flex h-96" data-controller="chats">
-  <section class="w-1/3 bg-purple-200 h-96 overflow-scroll">
-    <%= turbo_frame_tag 'chats' do %>
-      <%= turbo_stream_from chat_tab_stream(current_account) %>
+  <%= content_for :style do %>
+    <%= ".msg-#{current_account.id}" %> {
+      background-color: red;
+      text-align: right;
+    }
+  <% end %>
 
-      <div id="chat_tabs">
-        <% @chats.zip(@accounts).each do |chat, account| %>
-          <%= render 'chat_tab', chat:, account:, notification: false %>
-        <% end %>
-      </div>
-    <% end %>
-  </section>
-  <section class="w-2/3 bg-orange-200 overflow-scroll">
-    <% if @chat.present? %>
-      <%= render 'chat', chat: @chat, messages: @messages, message: @message %>
-    <% end %>
-  </section>
-</div>
+  <div class="w-full flex" data-controller="chats">
+    <section class="relative h-96" data-controller="sidebar" data-sidebar-show-value="true" data-sidebar-tab-show-classes-value=<%= ['gap-2.5'].to_json %> data-sidebar-sidebar-hide-classes-value=<%= ['w-16'].to_json %>>
+      <% [{ direction: 'right', button: 'hideButton'}, { direction: 'left', button: 'showButton'}].each do |toggle_button| %>
+        <button class="w-8 h-8 shadow-md bg-white rounded-full p-1 absolute -top-2 -right-4 text-primary-500" data-sidebar-target=<%= toggle_button[:button] %> data-action="sidebar#toggleSidebar">
+          <i class="fas fa-angle-double-<%= toggle_button[:direction] %> fa-sm"></i>
+        </button>
+      <% end %>
+
+      <%= turbo_frame_tag 'chats' do %>
+        <%= turbo_stream_from chat_tab_stream(current_account) %>
+
+        <div id="chat_tabs" class="rounded-xl border h-96 overflow-x-hidden overflow-y-hidden hover:overflow-y-scroll transition-all duration-300" data-sidebar-target="sidebar">
+          <% @chats.zip(@accounts).each do |chat, account| %>
+            <%= render 'chat_tab', chat:, account:, notification: false %>
+          <% end %>
+        </div>
+      <% end %>
+    </section>
+    <section class="h-96 w-full bg-orange-200 overflow-scroll">
+      <% if @chat.present? %>
+        <%= render 'chat', chat: @chat, messages: @messages, message: @message %>
+      <% end %>
+    </section>
+  </div>
+
+</section>
