--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -3,4 +3,6 @@
   <p>Find me in app/views/chats/show.html.erb</p>
 </div>
 
-<%= render 'chat', chat: @chat, messages: @messages, message: @message %>
+<div class="container border rounded-lg">
+  <%= render 'chat', chat: @chat, messages: @messages, message: @message %>
+</div>
