--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,10 +1,12 @@
-<%= form_with model: message, url: [chat, :messages], id: 'message-form' do |form| %>
+<%= form_with model: message, url: [chat, :messages], class: 'sticky bottom-0 border-t bg-white flex items-start py-2.5 px-4 gap-2.5', id: 'message-form' do |form| %>
   <div>
-    <%= form.label :body %>
-    <%= form.text_field :body %>
+    <%= form.text_field :body, class: 'w-full max-w-80 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500' %>
+    <% if message.errors.present? %>
+      <p class="text-xs text-danger-500"><%= message.errors.full_messages.first %></p>
+    <% end %>
   </div>
 
-  <%= message.errors.full_messages %>
-
-  <%= form.submit %>
+  <%= button_tag type: 'submit', class: 'bg-primary-500 text-white px-4 py-2.5 rounded-xl font-semibold' do %>
+    Send <i class="fas fa-paper-plane"></i>
+  <% end %>
 <% end %>
