--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -1,13 +1,33 @@
 <section class="container">
   <%= content_for :style do %>
+    <%- primary_color = '#8b5cf6' %>
     <%= ".msg-#{current_account.id}" %> {
-      background-color: red;
-      text-align: right;
+      flex-direction: row-reverse !important;
+    }
+    <%= ".msg-color-#{current_account.id}" %> {
+      background-color: <%= primary_color %> !important;
+    }
+    <%= ".msg-text-#{current_account.id}" %> {
+      color: white !important;
+      text-align: right !important;
+    }
+    <%= ".edit-ellipsis-#{current_account.id}" %> {
+      display: block !important;
+    }
+    <%= ".created-at-alignment-#{current_account.id}" %> {
+      right: 0 !important;
+      left: auto !important;
     }
   <% end %>
 
-  <div class="w-full flex" data-controller="chats">
-    <section class="relative" data-controller="sidebar" data-sidebar-show-value="true" data-sidebar-tab-show-classes-value=<%= ['gap-2.5'].to_json %> data-sidebar-sidebar-hide-classes-value=<%= ['w-16'].to_json %>>
+  <div class="w-full flex flex-col items-center md:flex-row md:items-center gap-2.5" data-controller="chats">
+    <section
+      class="relative"
+      data-controller="sidebar"
+      data-sidebar-show-value="true"
+      data-sidebar-tab-show-classes-value=<%= ['gap-2.5'].to_json %>
+      data-sidebar-sidebar-hide-classes-value=<%= ['w-16'].to_json %>
+    >
       <% [{ direction: 'right', button: 'hideButton'}, { direction: 'left', button: 'showButton'}].each do |toggle_button| %>
         <button class="z-50 w-8 h-8 shadow-md bg-white rounded-full p-1 absolute -top-2 -right-4 text-primary-500" data-sidebar-target=<%= toggle_button[:button] %> data-action="sidebar#toggleSidebar">
           <i class="fas fa-angle-double-<%= toggle_button[:direction] %> fa-sm"></i>
@@ -30,7 +50,7 @@
         <% end %>
       </section>
     </section>
-    <section class="h-[30rem] w-full bg-orange-200 overflow-scroll">
+    <section class="h-[30rem] w-full border rounded-xl overflow-auto relative flex flex-col justify-between bg-gray-50">
       <% if @chat.present? %>
         <%= render 'chat', chat: @chat, messages: @messages, message: @message %>
       <% end %>
