--- a/app/views/chats/_group_chat_tab.html.erb
+++ b/app/views/chats/_group_chat_tab.html.erb
@@ -6,7 +6,7 @@
     <div>
       <div class="w-full flex items-center gap-0 hover:gap-4 transition-all">
         <% accounts.first(5).each_with_index do |account, index| %>
-          <%= account_avatar(account, other_classes: "-mr-4 #{TailwindHelper::DYNAMIC_OPACITY[100 - (index+1)*10]}") %>
+          <%= account_avatar(account, other_classes: "-mr-4 border border-white") %>
         <% end %>
         <% if accounts.length > 5 %>
           <span class="ml-[1.25rem] text-sm text-gray-500">+<%= accounts.length - 5 %></span>
