--- a/app/views/chats/_chat.html.erb
+++ b/app/views/chats/_chat.html.erb
@@ -5,7 +5,7 @@
     <% if chat.two_person? %>
       <header class="z-40 sticky top-0 rounded-lg shadow-sm bg-white px-4 py-2.5 border-b flex justify-between items-center">
         <div class="flex items-center gap-2.5">
-          <%= account_avatar(current_account) %>
+          <%= account_avatar(@other_account) %>
           <p class="text-xl font-bold"><%= @other_account.full_name %></p>
         </div>
         <i class="fas fa-info-circle text-primary-500 cursor-pointer fa-xl"></i>
