--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,25 +23,16 @@
     <main class="flex flex-col items-center">
       <% if user_signed_in? %>
         <%= render 'shared/navbar' %>
-      <% end %>
-
-      <% if user_signed_in? %>
-        <%= button_to 'Sign Out', destroy_user_session_path, method: :delete %>
       <% else %>
         <%= link_to 'Register', new_user_registration_path %>
         <%= link_to 'Login', new_user_session_path %>
-      <% end %>
-
-      <% if user_signed_in? %>
-        <%= current_account.full_name %>
-        <br />
       <% end %>
 
       <div class="fixed top-12 right-12" id="flash">
         <%= render 'shared/flash' %>
       </div>
 
-      <%= yield %>
+      <section class="mt-8 container"><%= yield %></section>
 
       <%= turbo_frame_tag 'dialog' %>
     </main>
