--- a/app/views/chats/ai_chats.html.erb
+++ b/app/views/chats/ai_chats.html.erb
@@ -1,1 +1,30 @@
-<%= @chats.count %>
+
+<section class="container">
+  <%= content_for :style do %>
+    <%- primary_color = '#8b5cf6' %>
+    <%= ".msg-#{current_account.id}" %> {
+      flex-direction: row-reverse !important;
+    }
+    <%= ".msg-color-#{current_account.id}" %> {
+      background-color: <%= primary_color %> !important;
+    }
+    <%= ".msg-text-#{current_account.id}" %> {
+      color: white !important;
+      text-align: right !important;
+    }
+    <%= ".edit-ellipsis-#{current_account.id}" %> {
+      display: block !important;
+    }
+    <%= ".created-at-alignment-#{current_account.id}" %> {
+      right: 0 !important;
+      left: auto !important;
+    }
+  <% end %>
+
+  <% @chats.each do |chat| %>
+    <%= link_to chat.chat_title, chat, class: random_bg_color, data: { turbo_frame: 'chat' } %>
+  <% end %>
+
+  <%= turbo_frame_tag 'chat' %>
+</section>
+
