--- a/app/views/chats/_chat.html.erb
+++ b/app/views/chats/_chat.html.erb
@@ -19,12 +19,15 @@
     <div
       id=<%= dom_id(chat) %>
       class="px-4 flex flex-col gap-3 py-8"
-      data-controller="scroll"
+      data-controller="scroll <%= 'ai-chats' if chat.ai_chat? %>"
+      <% if chat.ai_chat? %>
+        data-ai-chats-chat-id-value="<%= @chat.id %>"
+      <% end %>
       data-scroll-target="scrollContainer"
       data-scroll-scrollable-into-view-value="true"
       data-scroll-scroll-container-to-bottom-value="true"
     >
-      <%= render partial: 'messages/message', collection: messages, locals: { chat:, scroll_into_view: false } %>
+      <%= render partial: 'messages/message', collection: messages, locals: { chat:, new_message: false, scroll_into_view: false } %>
     </div>
 
     <%= render 'messages/form', chat:, message: %>
